--- a/setup/config.json
+++ b/setup/config.json
@@ -10,7 +10,7 @@
   "PBMMPolicyID":"4c4a5f27-de81-430b-b4e5-9cbd50595a87",
   "AllowedLocationPolicyId": "e56962a6-4747-49cd-b67b-bf8b01975c4c",
   "DepartmentNumber": "",
-  "CBSSubscriptionName": "",
+  "CBSSubscriptionName": "N/A",
   "SecurityLAWResourceId":"",
   "HealthLAWResourceId":"",
   "Locale":""
