--- a/.github/workflows/moduleVersion.yml
+++ b/.github/workflows/moduleVersion.yml
@@ -24,6 +24,7 @@ jobs:
 
       - id: files
         uses: jitterbit/get-changed-files@v1
+        continue-on-error: true
         with:
           format: json
 
