--- a/.github/workflows/moduleVersion.yml
+++ b/.github/workflows/moduleVersion.yml
@@ -37,9 +37,11 @@ jobs:
           
           $moduleVersionRegex = [regex]"(?:ModuleVersion\s?=\s?')([\d\.]*)'" 
 
-          $moduleManifestList = $files | where-object { $_ -match '\.psd1$'}
+          $moduleChangedFileList = $files | where-object { $_ -match '\.psm1$'}
 
-          ForEach ($moduleManifestPath in $moduleManifestList) {
+          ForEach ($moduleChangedFile in $moduleChangedFileList) {
+              $moduleManifestPath = Get-Item -Path ($moduleChangedFile -replace '\.psm1$','.psd1')
+              
               $moduleManifest = Get-Item $moduleManifestPath
               $content = Get-Content $moduleManifest
 
