--- a/.github/workflows/moduleVersion.yml
+++ b/.github/workflows/moduleVersion.yml
@@ -81,4 +81,4 @@ jobs:
 
           git add -A
           git commit -am "incremented changed module versions: $(git log -1 --pretty=%B)"
-          git push
+          git push origin HEAD:$env:GITHUB_BASE_REF
