--- a/.github/workflows/moduleVersion.yml
+++ b/.github/workflows/moduleVersion.yml
@@ -75,6 +75,8 @@ jobs:
         shell: pwsh
       - name: commit changes
         run: |
+          gci env:
+
           git branch
           git config --global user.name 'Matthew Bratschun'
           git config --global user.email 'mbratschun@microsoft.com'
@@ -82,3 +84,4 @@ jobs:
           git add -A
           git commit -am "incremented changed module versions: $(git log -1 --pretty=%B)"
           git push origin HEAD:$($env:GITHUB_SOURCE_REF)
+        shell: pwsh
