--- a/.github/workflows/moduleVersion.yml
+++ b/.github/workflows/moduleVersion.yml
@@ -75,7 +75,7 @@ jobs:
         run: |
           gci env:
 
-          git branch
+          git checkout $($env:GITHUB_HEAD_REF)
           git config --global user.name 'Matthew Bratschun'
           git config --global user.email 'mbratschun@microsoft.com'
 
