--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
+- powershell: |
+    echo Build.SourceVersion; ${{ Build.SourceVersion}}
+    gci env:
   displayName: 'Run a multi-line script'
