Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,4 +15,5 @@ steps:
 
 - powershell: |
     gci env:
+    git diff-tree --no-commit-id --name-only -r ${{ System.PullRequest.TargetBranch }} ${{ System.PullRequest.SourceBranch }}
   displayName: 'Run a multi-line script'
