Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,7 +55,7 @@ steps:
       }
     }
     catch {
-      Write-Error "Failed to find file path '$file' with Get-Item -Path $file"
+      Write-Error "Failed to find file path '$file' with Get-Item -Path '$file'; Error: $_"
     }
 
     $zipsChanged = $false
