Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ steps:
 - powershell: |
     Write-Host "Executing powershell script in '$pwd'"
     #gci env: | FT -AutoSize
-    gci $env:BUILD_REPOSITORY_LOCALPATH | FT -AutoSize
+    gci $env:BUILD_REPOSITORY_LOCALPATH`/src | FT -AutoSize
     
     $files = $env:GETFILESCHANGEDINPR_FILESCHANGEDINLASTPR.split(';')
     Write-Host "Total '$($files.count)' files changed in last commit. Files: `n $files"
