--- a/ado-signing-pipeline.yml
+++ b/ado-signing-pipeline.yml
@@ -3,10 +3,11 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+trigger: none
 pr:
   branches:
     include: 
-      - main
+      - '*'
 
 pool:
   vmImage: ubuntu-latest
